# Test

./: CMakeLists.txt  fromTjy.txt  gb.txt  new.txt
1000jiechen/: ReadMe.txt  StdAfx.h  jiechen.cpp  jiechen.dsp  jiechen.dsw  jiechen.ncb  jiechen.opt  jiechen.plg
1000jiechen/Debug/: jiechen.ilk  jiechen.pch  vc60.idb
